# Commutation

./: .gitignore  Commutation.py  Demonstrations.ipynb  KKJ.ipynb  README.md  Ringflip.ipynb  Spin Algebra.ipynb  SpinTrain.py  SpinTrainv2.py  TODO.md  hexamer.ipynb  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: python-package.yml
.ipynb_checkpoints/: README-checkpoint.md  SpinTrain-checkpoint.py  test-checkpoint.ipynb
Examples/: Demonstrations.ipynb  Ringflip-Jpmpm.ipynb  Spin Algebra.ipynb  hexamer.ipynb  test.ipynb
Mathematica/: Local_Axes.nb  ringflip_sizes.nb
Overcomplicated/: test_algebra.ipynb
src/commutation/: __init__.py  commutatoralgebra.py  expression.py  operator.py  term.py
