[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Commutation_SPURIOSITY1"
version = "1.4.0"
requires-python = ">= 3.8"
authors = {
	{name = "Alaric Sanders", email="thathatatt@gmail.com"}
}
readme="README.md"

description = "A small package for doing commutator algebra"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Spuriosity1/Commutation"
Issues = "https://github.com/Spuriosity1/Commutation/issues"
